--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="texto">
                 <h2>The best way to get your coffee
                     without leaving the comfort
-                    of your house</h2>
+                    of your house.</h2>
                 <div class="copo">
                 
                     <img src="assets/img/copo.svg" alt="">
